Latest CVS changes: 09/01/07
  - moved ffmpeg headers to latest CVS version (05/01/2007).
  - fixes in MPEG2 TS import
  - large code rewrite in scenegraph and 2D renderer to lower memory usage
  - added support for OMA DRM2 packaging in MP4Box (doc to come)
  - initial commit of symbian version. Build instructions are in doc/INSTALL.symbian.
  - Speedup of XML SAX parser
  - addded unthreaded mode in MP4Client (-no-thread switch) to test behavior on symbian
  - addded fullscreen startup mode in MP4Client (-fs switch)
  - fixed handling of iTunes tags in MP4Box (set/get) and in players (title display)
  - libgpac and some modules now ported to symbian 9.1, but player not done yet
      !! GPAC may be quite unstable during this porting phase !! 
  - added detection of FPS for raw AVC import when present
  - fixed a display freezing bug in osmo4 for PocketPC 2003.
  - moved key/mouse event subsystem to DOM3 model 
  - added support for svg animation and svg use with external resources
  - cleanup of MPEG-4 RemoteOD + support for segment identifiers at scene level
  - added support for multiple RTSP sessions in an SDP description
  - added support for faked broadcast mode in SDP (forbids any timeline control by player except initial play/final stop)
      syntax is (in media SDP section, per stream): a=gpac-broadcast:1
  - some workarounds for iPod file producing (special UUID needed) (-ipod option, auto on for .m4a and .m4v extensions)
  - added windowless mode on Win32: transparent background color is defined in the config file ( [Rendering] ColorKey )
  - added iTunes tag support in GPAC clients (ID3 tags not supported yet)
  - fixed some iTunes tags handling bug, and added cover art support (extract/set) in MP4Box
  - added GPAC log system
  - major speed improvements in MPEG-4/VRML scripts and SVG uDOM regarding node creation

21/07/06: GPAC 0.4.2
  - commit of GPAX (GPAC ActiveX) - controller only works in IE and ActiveX control tester for now.